# amethyst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/models/cube/: Cube.gltf  Cube_BaseColor.ktx2  Cube_MetallicRoughness.ktx2
data/shaders/main/: common.glsl  main.frag  main.vert  z_prepass.vert
data/shaders/shadows/: common.glsl  cull.comp  final.frag  shadow.vert  visibility.frag  visibility.vert
data/shaders/taa/: final.frag  taa_resolve.frag  visibility.frag  visibility.vert
data/shaders/visbuffer/: common.glsl  depth_reduce.comp  final.frag  taa_resolve.frag  taa_resolve.vert  visibility.vert
data/textures/: default.ktx2  wall.ktx2
include/amethyst/core/: expected.hpp  file_view.hpp  rc_ptr.hpp  ref_counted.hpp
include/amethyst/graphics/: async_mesh.hpp  async_model.hpp  async_texture.hpp  buffer_suballocator.hpp  clear_value.hpp  command_buffer.hpp  context.hpp  descriptor_pool.hpp  descriptor_set.hpp  device.hpp  fence.hpp  framebuffer.hpp  image.hpp  pipeline.hpp  query_pool.hpp  queue.hpp  render_pass.hpp  semaphore.hpp  swapchain.hpp  typed_buffer.hpp  ui_context.hpp  virtual_allocator.hpp
include/amethyst/meta/: constants.hpp  debug_marker.hpp  enums.hpp  forwards.hpp  hash.hpp  macros.hpp  types.hpp
include/amethyst/window/: input.hpp  window.hpp  windowing_system.hpp
src/core/: file_view.cpp  ref_counted.cpp
src/ext/: vma.cpp
src/graphics/: async_mesh.cpp  async_model.cpp  async_texture.cpp  buffer_suballocator.cpp  command_buffer.cpp  context.cpp  descriptor_pool.cpp  descriptor_set.cpp  device.cpp  fence.cpp  framebuffer.cpp  image.cpp  pipeline.cpp  query_pool.cpp  queue.cpp  render_pass.cpp  semaphore.cpp  swapchain.cpp  ui_context.cpp  virtual_allocator.cpp
src/window/: input.cpp  window.cpp  windowing_system.cpp
tests/: common.hpp  test_shadows.cpp  test_sponza.cpp  test_visbuffer.cpp
